Fix select box selected item text color in dark mode

--- a/authui/src/authflowv2/components/select-input.css
+++ b/authui/src/authflowv2/components/select-input.css
@@ -26,6 +26,7 @@
 
   .select-input__trigger {
     @apply flex justify-between items-center;
+    color: var(--select-input__text-color);
     padding: var(--select-input__trigger-padding);
     border-radius: var(--select-input__trigger-border-radius);
     @apply ring-inset
